--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ body {
    top: 10px;
 }
 
+div.button,
 button {
    box-sizing: border-box;
    cursor: pointer;
@@ -155,7 +156,7 @@ button:active {
    opacity: 0.8;
 }
 
-.input-custon input[type='number'],
+.size_select input[type='number'],
 button {
    background: #f2f5f5;
    border-radius: 8px;
@@ -201,13 +202,12 @@ button {
 
 .item_description {
    flex-direction: column;
-   margin-top: 80px;
+   margin-top: 40px;
 }
 
 .primary {
    width: 316px;
    min-height: 476px;
-   margin-top: 80px;
 }
 
 .secondary {
@@ -220,15 +220,22 @@ button {
    justify-content: space-between;
 }
 
+.size_select.custom {
+   margin-bottom: 0;
+}
+
+.size_select,
+.radio-select {
+   margin-bottom: 32px;
+}
+
 .radio-select ul {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    gap: 12px;
    width: 290px;
-}
-
-.radio-select ul {
+   margin: 10px 0;
    padding: 0;
 }
 .radio-select ul li {
@@ -273,19 +280,19 @@ input.radio:not(label) {
    color: #ffffff;
 }
 
-.input-custon {
+.size_select {
    display: flex;
    gap: 8px;
+   position: relative;
+   margin-top: 10px;
 }
 
-.input-custon input::-webkit-outer-spin-button,
-.input-custon input::-webkit-inner-spin-button {
-   /* -webkit-appearance: none; */
-   margin: 0;
+.size_select input::-webkit-outer-spin-button,
+.size_select input::-webkit-inner-spin-button {
+   -webkit-appearance: none;
 }
 
-.input-custon input[type='number'] {
-   /* font-family: 'SF Pro Text'; */
+.size_select input[type='number'] {
    padding: 0;
    margin: 0;
    width: 64px;
@@ -295,20 +302,89 @@ input.radio:not(label) {
    letter-spacing: 0em;
    position: relative;
    z-index: 0;
-   /* -moz-appearance: textfield; */
+   -moz-appearance: textfield;
+   color: #ea04a8;
+   font-weight: 700;
+   overflow: visible;
+   z-index: 0;
 }
 
-.input-custon input[type='number']::after {
+.size_select span {
    position: absolute;
+   left: 30%;
+   top: 10px;
+}
+
+.item_description .info-text {
+   margin: 0;
+   font-weight: 600;
+}
+
+.additional-options {
+}
+
+.additional-options fieldset {
+   margin: 0;
+   padding: 0;
+   border: none;
+}
+
+.additional-options fieldset div {
+   width: 100%;
+   max-width: 100%;
+   height: 44px;
+   padding: 0 12px;
+   border-radius: 8px;
+   background: #e0ecf0;
+   margin-bottom: 4px;
+   font-family: SF Pro Text;
+   font-size: 14px;
+   font-weight: 600;
+   line-height: 14px;
+   text-align: left;
+   display: flex;
+   align-items: center;
+   justify-content: flex-start;
+}
+
+.additional-options fieldset div span {
+   margin: auto;
+   margin-right: 0;
+}
+
+input[type='checkbox' i] {
+   display: none;
+}
+
+input[type='checkbox'] ~ label {
+   position: relative;
+   overflow: visible;
+   margin-left: 30px;
+   cursor: pointer;
+   padding: 4px 0;
+   line-height: 20px;
+   width: 100%;
+}
+
+input[type='checkbox'] ~ label::before {
+   background: #ffffff;
+   position: absolute;
+   left: -30px;
+   bottom: -6px;
+   transform: translate(0, -50%);
    display: block;
-   content: '+++';
-   font-size: 16px;
-   font-weight: 400;
-   background: #eb1595;
-   color: yellow;
-   z-index: 2;
-   width: 64px;
-   height: 64px;
-   left: 0;
-   bottom: 0;
+   content: '';
+   width: 20px;
+   height: 20px;
+   border: 1px solid #424849;
+   border-radius: 4px;
+   z-index: 3;
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+}
+
+input[type='checkbox']:checked ~ label::before {
+   content: url('./assets/icons/StateInactiveChecled.svg');
+   border: transparent;
 }
