--- a/styles.css
+++ b/styles.css
@@ -63,9 +63,6 @@ body {
    display: flex;
 }
 
-.item_gallery {
-}
-
 .image_wrapper {
    position: relative;
 }
@@ -262,7 +259,7 @@ button {
 input.radio:not(label) {
    width: 20px;
    height: 20px;
-   border-radius: none;
+   border-radius: 0;
    visibility: hidden;
    position: absolute;
 }
@@ -319,7 +316,7 @@ input[type='number'] {
    letter-spacing: 0em;
    position: relative;
    z-index: 0;
-   color: #ea04a8;
+   color: #424849;
    font-weight: 700;
    overflow: visible;
    border: 1px solid #d6dcdd;
@@ -339,13 +336,11 @@ input[type='number'] {
 
 .info-text .tooltip-wrapper {
    position: relative;
+   margin-left: 8px;
 }
 
 .tooltip-wrapper i {
    cursor: pointer;
-}
-
-.additional-options {
 }
 
 .additional-options fieldset {
@@ -365,7 +360,7 @@ input[type='number'] {
    border-radius: 8px;
    background: #e0ecf0;
    margin-bottom: 4px;
-   font-family: SF Pro Text;
+   font-family: 'SF Pro Text';
    font-size: 14px;
    font-weight: 600;
    line-height: 14px;
@@ -479,10 +474,6 @@ input[type='checkbox']:checked ~ label::before {
    text-decoration: none;
 }
 
-.stock-data,
-.item-ratio-data {
-}
-
 .item-ratio-data {
    width: 100%;
    background: #ffdfd7;
@@ -519,7 +510,7 @@ input[type='checkbox']:checked ~ label::before {
 }
 
 .item-price {
-   font-family: SF Pro Text;
+   font-family: 'SF Pro Text';
    font-size: 24px;
    font-weight: 700;
    line-height: 24px;
@@ -531,7 +522,7 @@ input[type='checkbox']:checked ~ label::before {
 .item-price span:nth-child(1),
 .item-price span:nth-child(3) {
    margin-right: 2px;
-   font-family: SF Pro Text;
+   font-family: 'SF Pro Text';
    font-size: 10px;
    font-weight: 700;
    line-height: 10px;
@@ -541,8 +532,7 @@ input[type='checkbox']:checked ~ label::before {
 .item-price span:nth-child(1) {
    color: #697071;
 }
-.item-price span {
-}
+
 .item-price span:last-of-type {
    vertical-align: top;
 }
@@ -556,7 +546,7 @@ input[type='checkbox']:checked ~ label::before {
 }
 
 .item-amount input[type='number'] {
-   font-family: SF Pro Text;
+   font-family: 'SF Pro Text';
    background: #ffffff;
    width: inherit;
    font-size: 16px;
@@ -603,7 +593,7 @@ button:disabled svg {
 
 .item-details {
    display: block;
-   font-family: SF Pro Text;
+   font-family: 'SF Pro Text';
    font-size: 12px;
    color: #697071;
    font-weight: 400;
@@ -622,7 +612,7 @@ button:disabled svg {
    box-sizing: border-box;
    padding: 16px;
    width: 168px;
-   font-family: SF Pro Text;
+   font-family: 'SF Pro Text';
    font-size: 14px;
    font-weight: 300;
    line-height: 14px;
@@ -787,7 +777,7 @@ button:disabled svg {
    .caption-expander {
       justify-content: flex-start;
       align-items: flex-start;
-      font-family: SF Pro Text;
+      font-family: 'SF Pro Text';
       font-size: 14px;
       font-weight: 400;
       line-height: 14px;
