--- a/backup/style-1.css
+++ b/backup/style-1.css
@@ -60,6 +60,7 @@ button {
    box-shadow: none;
    cursor: pointer;
    font-family: Raleway, sans-serif;
+   font-size: 16px;
    font-style: italic;
    font-weight: 500;
 }
@@ -85,28 +86,6 @@ button.outlined:hover {
    -webkit-text-fill-color: unset;
 }
 
-body::-webkit-scrollbar {
-   width: 0.5rem;
-}
-
-/* Track */
-body::-webkit-scrollbar-track {
-   background: var(--primary-dark);
-}
-
-/* Handle */
-body::-webkit-scrollbar-thumb {
-   border: 1px solid var(--primary-color);
-   border-radius: 5px;
-   background: #486b79;
-}
-
-/* Handle on hover */
-body::-webkit-scrollbar-thumb:hover {
-   border: 2px solid var(--primary-color);
-   opacity: 1;
-   background: var(--primary-color);
-}
 /* Common styles */
 
 .cta,
@@ -150,55 +129,9 @@ body::-webkit-scrollbar-thumb:hover {
 .footer__list,
 .footer__copyright,
 .header__text,
-.plan__card .plan__heading,
 .header__nav {
    font-style: normal;
 }
-
-.plan__card,
-.about__content,
-.header__button,
-.story__content-text,
-.roadmap__section-text,
-.plan__description li p,
-.roadmap .roadmap__section-title,
-.footer__content-section:first-of-type p,
-.footer__list,
-.footer__copyright,
-.questions__text {
-   font-size: 0.875rem;
-   font-weight: 300;
-}
-
-.footer__title,
-.about__content,
-.feedback__form input::placeholder,
-.feedback__form textarea::placeholder,
-.plan__card,
-.section__description,
-.plan__description li span,
-.questions__title,
-button {
-   font-size: 1rem;
-}
-
-.elipse-left-top,
-.elipse__abstract-left,
-.elipse__abstract-right,
-.plans__bg-abstract,
-.about__bg-abstract,
-.roadmap__bg-abstract,
-.questions__item::before,
-.cta__image-message::after,
-.cta::before,
-.feedback__bg-abstract-top,
-.feedback__bg-abstract,
-.roadmap__point::before,
-.header__background {
-   position: absolute;
-   z-index: -1;
-}
-
 /* ----- Header styles --------------------- */
 
 .header {
@@ -259,6 +192,7 @@ button {
    height: 100%;
    line-height: 100%;
    padding: 0 1.65rem;
+   font-size: 14px;
    font-weight: 100;
 }
 
@@ -335,6 +269,8 @@ button {
 }
 
 .header__background {
+   position: absolute;
+   z-index: -1;
    top: -0%;
    left: 40%;
    overflow: visible;
@@ -383,6 +319,7 @@ button {
 }
 
 .elipse-left-top {
+   z-index: -1;
    top: -30%;
    left: -25%;
    width: 600px;
@@ -397,6 +334,30 @@ button {
    width: 240px;
    height: 240px;
    content: url('./assets/images/ellipse-1.png');
+}
+
+@media (max-width: 768px) {
+   .header__container {
+      align-items: flex-start;
+      flex-direction: column;
+   }
+
+   .header__nav {
+      margin-top: 10px;
+   }
+
+   .header__nav-list {
+      align-items: flex-start;
+      flex-direction: column;
+   }
+
+   .header__nav-item {
+      margin: 5px 0;
+   }
+
+   .header__button-container {
+      margin-top: 10px;
+   }
 }
 
 /* ------Story-section styles --------------------- */
@@ -415,6 +376,8 @@ button {
 
 .elipse__abstract-left,
 .elipse__abstract-right {
+   position: absolute;
+   z-index: -1;
    bottom: -25%;
    left: -50%;
    width: 510px;
@@ -447,6 +410,7 @@ button {
    font-weight: 700;
 }
 .section__description {
+   font-size: 16px;
    font-weight: 400;
 }
 
@@ -482,16 +446,18 @@ button {
    height: auto;
 }
 .story__content {
+   /* width: 70%; */
 }
 
 .story__content-title {
    line-height: 1.35;
-   font-size: 1.125rem;
-   font-weight: 500;
+   font-size: 18px;
 }
 
 .story__content-text {
    line-height: 130%;
+   font-size: 14px;
+   font-weight: 300;
 }
 
 /* ------ Plans-section styles --------------------- */
@@ -506,6 +472,8 @@ button {
 }
 
 .plans__bg-abstract {
+   position: absolute;
+   z-index: -1;
    right: -30%;
    bottom: -45%;
    width: 530px;
@@ -537,6 +505,8 @@ button {
    border-radius: 22px;
    color: #223138;
    background-color: var(--light);
+   font-size: 1rem;
+   font-weight: 300;
    grid-row: span 2;
    gap: 2rem;
 }
@@ -598,8 +568,12 @@ button {
    line-height: 1.3;
    margin: 11px 0;
 }
+.plan__description li p {
+   font-size: 14px;
+}
 
 .plan__description li span {
+   font-size: 16px;
    font-style: italic;
    font-weight: 100;
 }
@@ -610,7 +584,7 @@ button {
    padding: 1.375rem 0;
    color: var(--light);
    background: rgba(82, 164, 255, 1);
-   font-size: 1.125rem;
+   font-size: 18px;
    font-style: italic;
    font-weight: 500;
 }
@@ -634,8 +608,10 @@ button {
 }
 
 .about__content {
-   line-height: 130%;
+   line-height: 131%;
    padding: 0 30px;
+   font-size: 16px;
+   font-weight: 300;
 }
 
 .about__content p {
@@ -648,6 +624,8 @@ button {
 }
 
 .about__bg-abstract {
+   position: absolute;
+   z-index: -1;
    bottom: -5%;
    left: -3%;
    width: 315px;
@@ -715,12 +693,15 @@ button {
 .roadmap .roadmap__section-title {
    margin-top: 0;
    margin-bottom: 0.5rem;
+   font-size: 14px;
    font-weight: 500;
 }
 .roadmap__section-text {
    max-width: 60%;
    margin: 0;
    color: rgba(255, 255, 255, 0.8);
+   font-size: 14px;
+   font-weight: 300;
 }
 .roadmap__line {
    position: absolute;
@@ -734,24 +715,14 @@ button {
 .roadmap__point {
    position: absolute;
    top: 50%;
-   display: block;
    width: 0.875rem;
    height: 0.875rem;
-   transform: translate(-50%, -50%);
-}
-.roadmap__point::after {
-   position: absolute;
-   z-index: 1;
-   top: 0;
-   left: 0;
-   display: block;
-   width: 100%;
-   height: 100%;
    border-radius: 50%;
    background: var(--light);
-   content: '';
+   transform: translate(-50%, -50%);
 }
 .roadmap__point::before {
+   position: absolute;
    top: -100%;
    left: -100%;
    width: 300%;
@@ -780,6 +751,8 @@ button {
 }
 
 .roadmap__bg-abstract {
+   position: absolute;
+   z-index: -1;
    top: 50%;
    left: 50%;
    width: 426px;
@@ -792,10 +765,10 @@ button {
 
 /* Question styles */
 
-.questions .section__title {
-   margin-bottom: 2rem;
+.questions {
 }
-
+.section__title {
+}
 .questions__list {
    width: var(--section-content);
    padding-left: 0;
@@ -818,6 +791,8 @@ button {
 }
 
 .questions__item::before {
+   position: absolute;
+   z-index: -1;
    top: 0;
    right: 0;
    width: 50px;
@@ -835,12 +810,12 @@ button {
 
 .questions__title-container {
 }
-
 .questions__title {
    height: 50px;
    line-height: 50px;
    margin: 0;
    cursor: pointer;
+   font-size: 16px;
    font-weight: 400;
 }
 .questions__text {
@@ -848,6 +823,8 @@ button {
    line-height: 140%;
    margin-top: 0;
    color: rgba(181, 201, 211, 1);
+   font-size: 14px;
+   font-weight: 300;
 }
 
 .questions__expand {
@@ -872,6 +849,8 @@ button {
 }
 
 .cta::before {
+   position: absolute;
+   z-index: -1;
    bottom: 0;
    left: 0;
    width: 100%;
@@ -889,7 +868,7 @@ button {
 .cta__text {
    line-height: 115%;
    margin: 0;
-   font-size: 1.125rem;
+   font-size: 18px;
    font-weight: 400;
 }
 .cta__button {
@@ -930,6 +909,8 @@ button {
 }
 
 .cta__image-message::after {
+   position: absolute;
+   z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
@@ -958,7 +939,6 @@ button {
    gap: 1rem;
 }
 
-.feedback__form textarea::placeholder,
 .feedback__form input::placeholder {
    opacity: 0.5;
    color: var(--primary-background);
@@ -987,6 +967,8 @@ button {
 
 .feedback__bg-abstract-top,
 .feedback__bg-abstract {
+   position: absolute;
+   z-index: -1;
    right: -3%;
    bottom: -5%;
    width: 315px;
@@ -1015,7 +997,7 @@ button {
 /* Footer styles */
 
 .footer {
-   padding-top: 44px;
+   padding: 44px 0;
    background: rgba(24, 32, 37, 0.4);
 }
 
@@ -1034,6 +1016,7 @@ button {
    width: 70%;
    line-height: 150%;
    margin-top: 0;
+   font-size: 14px;
    font-weight: 400;
 }
 
@@ -1046,7 +1029,6 @@ button {
 }
 
 .footer__bottom {
-   padding: 2rem 0;
    border-top: 1px solid rgba(51, 68, 77, 1);
 }
 
@@ -1059,6 +1041,7 @@ button {
 .footer__title {
    height: 1.2rem;
    line-height: 150%;
+   font-size: 1rem;
    font-weight: 400;
 }
 
@@ -1067,6 +1050,7 @@ button {
    padding: 0;
    margin: 0;
    list-style-type: none;
+   font-size: 14px;
    font-weight: 400;
 }
 
@@ -1081,6 +1065,7 @@ button {
 }
 
 .footer__social img {
+
    width: 24px;
    height: 24px;
 }
@@ -1091,7 +1076,7 @@ button {
 
 .footer__copyright {
    line-height: 150%;
-   margin: 0;
    color: rgba(127, 147, 158, 1);
+   font-size: 14px;
    font-weight: 400;
 }
