--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -1,23 +1,134 @@
-@media (max-width: 768px) {
-   .header__container {
-      align-items: flex-start;
-      flex-direction: column;
+@media (max-width: 560px) {
+   html {
+      font-size: 14px;
+   }
+
+   .container {
+      max-width: 100%;
+      box-sizing: border-box;
+      padding: 0 0.875rem;
+   }
+
+   .section,
+   .footer,
+   .header {
+      overflow: hidden;
+   }
+
+   .container {
+   }
+   .header__menu {
+      height: 60px;
+      padding-top: 0.2rem;
+   }
+   .header__logo-container {
+   }
+   .header__logo-link {
+   }
+
+   .header__logo-image {
+      height: 36px;
+      margin-top: -10px;
    }
 
    .header__nav {
-      margin-top: 10px;
+      display: none;
    }
-
    .header__nav-list {
-      align-items: flex-start;
-      flex-direction: column;
    }
-
    .header__nav-item {
-      margin: 5px 0;
+   }
+   .header__nav-link {
+   }
+   .header__button-container {
+   }
+   .header__button {
+   }
+   .header__content {
+      margin-top: 50vw;
+   }
+   .header__title {
+      /* margin-bottom: 4rem; */
+      font-size: 1.625rem;
    }
 
-   .header__button-container {
-      margin-top: 10px;
+   .header__title,
+   .header__text {
+      max-width: 85%;
+      line-height: 1.25;
+      margin-top: 0.5rem;
+   }
+
+   .header__buttons-container {
+      width: auto;
+      margin-top: 1rem;
+   }
+
+   .header__buttons-container button {
+      width: auto;
+      white-space: nowrap;
+   }
+   .outlined {
+   }
+   .header__cards-container {
+      align-items: center;
+      flex-direction: column;
+      height: auto;
+      padding: 2rem 1rem;
+      margin: 4rem auto 0;
+      gap: 1.75rem;
+   }
+
+   .header__card:first-child {
+      align-self: flex-start;
+   }
+   .header__card:last-child {
+      align-self: flex-end;
+   }
+   .header__card {
+   }
+   .header__card-item {
+      /* transform: scale(0.5); */
+   }
+   .header__card-text {
+   }
+   .header__background {
+      top: 0;
+      left: 0;
+      overflow: visible;
+      width: 100%;
+      height: 100%;
+      background-position: right 12%;
+      background-size: 80%;
+   }
+   .header__background::before {
+      top: 0%;
+      right: 15%;
+      left: unset;
+   }
+   .header__background-image {
+      top: 12%;
+      right: -5%;
+      left: unset;
+      width: 60%;
+      height: auto;
+   }
+   .elipse {
+      bottom: unset;
+   }
+   .elipse-xs {
+      top: 12%;
+   }
+   .elipse-sm {
+      top: 15%;
+   }
+   .elipse-md {
+      bottom: 40%;
+   }
+   .elipse-lg {
+      bottom: 5%;
+      left: -5%;
+   }
+   .elipse-left-top {
    }
 }
