--- a/styles.css
+++ b/styles.css
@@ -275,7 +275,7 @@ button {
 .header__title {
    line-height: 115%;
    color: var(--light);
-   font-size: 40px;
+   font-size: 2.5rem;
    font-style: italic;
    font-weight: 500;
 }
@@ -302,12 +302,14 @@ button {
    justify-content: space-around;
    width: 100%;
    height: 200px;
+   box-sizing: border-box;
    margin-top: 7rem;
    margin-bottom: 0;
    border: 1px solid rgba(221, 221, 221, 0.07);
    border-radius: 22px;
    background: rgba(242, 242, 242, 0.02);
    backdrop-filter: blur(10px);
+
 }
 
 .header__card {
