--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@
 
 html {
    line-height: 100%;
+   scroll-behavior: smooth;
    color: var(--light);
    letter-spacing: 0%;
    font-family: Raleway, sans-serif;
@@ -40,6 +41,7 @@ body {
    overflow-y: scroll;
    padding: 0;
    margin: 0;
+   scroll-behavior: smooth;
    color: #fff;
    background: linear-gradient(99.36deg, #29404a -4.07%, #1e292f 93.88%);
 }
@@ -445,7 +447,7 @@ button {
 .section__title {
    line-height: 1;
    margin: 1rem 0 64px;
-   font-size: 32px;
+   font-size: 2rem;
    font-weight: 700;
 }
 .section__description {
@@ -575,20 +577,20 @@ button {
 .plan__card .plan__heading {
    margin-bottom: 25px;
    color: rgba(82, 164, 255, 1);
-   font-size: 20px;
+   font-size: 1.25rem;
    font-weight: 400;
 }
 .plan__card:nth-child(3) .plan__price {
-   font-size: 30px;
+   font-size: 1.875rem;
 }
 .plan__price {
    color: rgb(34, 49, 56);
-   font-size: 52px;
+   font-size: 3.25rem;
    font-weight: 500;
 }
 .plan__price span {
    color: rgba(109, 128, 136, 1);
-   font-size: 20px;
+   font-size: 1.25rem;
    font-weight: 400;
 }
 
@@ -827,7 +829,7 @@ button {
    line-height: 50px;
    content: ' + ';
    text-align: right;
-   font-size: 36px;
+   font-size: 2.25rem;
    font-weight: 400;
 }
 .questions__item.active::before {
@@ -885,7 +887,7 @@ button {
 
 .cta__title {
    margin: 10px 0 20px;
-   font-size: 32px;
+   font-size: 2rem;
    font-weight: 700;
 }
 .cta__text {
